INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
set( QT_USE_XML TRUE)
INCLUDE(${QT_USE_FILE})
ADD_DEFINITIONS(${QT_DEFINITIONS})


FILE(GLOB_RECURSE SRC *.cpp)
FILE(GLOB_RECURSE HEADERS *.h)
FILE(GLOB_RECURSE FORMS *.ui)

QT4_WRAP_CPP(HEADERS_MOC ${HEADERS})
QT4_WRAP_UI(FORMS_HEADERS ${FORMS})
# QT4_ADD_RESOURCES(helloworld_RESOURCES_RCC ${helloworld_RESOURCES})

ADD_EXECUTABLE(qsimkit ${SRC}
    ${HEADERS_MOC}
    ${FORMS_HEADERS})
TARGET_LINK_LIBRARIES(qsimkit ${QT_LIBRARIES} simkit_cpu)

