INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
ADD_DEFINITIONS(${QT_DEFINITIONS})
ADD_DEFINITIONS(-DQT_PLUGIN)
ADD_DEFINITIONS(-DQT_NO_DEBUG)
ADD_DEFINITIONS(-DQT_SHARED)

FILE(GLOB_RECURSE MSP430SRC *.cpp)
FILE(GLOB_RECURSE MSP430HEADERS *.h)
FILE(GLOB MCUHEADERS ${CMAKE_CURRENT_SOURCE_DIR}/../*.h)

QT4_WRAP_CPP(MCUHEADERS_MOC ${MSP430HEADERS})

ADD_LIBRARY(msp430 SHARED ${MSP430SRC} ${MSP430HEADERS_MOC} ${MCUHEADERS_MOC})
TARGET_LINK_LIBRARIES(msp430 ${QT_LIBRARIES} simkit_cpu)

