INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
ADD_DEFINITIONS(${QT_DEFINITIONS})
ADD_DEFINITIONS(-DQT_PLUGIN)
ADD_DEFINITIONS(-DQT_NO_DEBUG)
ADD_DEFINITIONS(-DQT_SHARED)

FILE(GLOB LEDSRC *.cpp)
FILE(GLOB LEDHEADERS *.h)

QT4_WRAP_CPP(LEDHEADERS_MOC ${LEDHEADERS})

ADD_LIBRARY(led SHARED ${LEDSRC} ${LEDHEADERS_MOC})
TARGET_LINK_LIBRARIES(led ${QT_LIBRARIES})

