INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
ADD_DEFINITIONS(${QT_DEFINITIONS})
ADD_DEFINITIONS(-DQT_PLUGIN)
ADD_DEFINITIONS(-DQT_NO_DEBUG)
ADD_DEFINITIONS(-DQT_SHARED)

FILE(GLOB OSCSRC *.cpp)
FILE(GLOB OSCHEADERS *.h)

QT4_WRAP_CPP(OSCHEADERS_MOC ${OSCHEADERS})

ADD_LIBRARY(oscillator SHARED ${OSCSRC} ${OSCHEADERS_MOC})
TARGET_LINK_LIBRARIES(oscillator ${QT_LIBRARIES})

INSTALL(TARGETS oscillator
	DESTINATION ${LIB_INSTALL_DIR}/qsimkit/peripheral/oscillator
	COMPONENT oscillator
)

INSTALL(FILES peripheral.xml
	DESTINATION ${LIB_INSTALL_DIR}/qsimkit/peripheral/oscillator
	COMPONENT oscillator
)
