INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
ADD_DEFINITIONS(${QT_DEFINITIONS})
ADD_DEFINITIONS(-DQT_PLUGIN)
ADD_DEFINITIONS(-DQT_NO_DEBUG)
ADD_DEFINITIONS(-DQT_SHARED)

FILE(GLOB_RECURSE MSP430SRC *.cpp)
FILE(GLOB_RECURSE MSP430HEADERS *.h)

QT4_WRAP_CPP(MSP430HEADERS_MOC ${MSP430HEADERS})

ADD_LIBRARY(msp430 SHARED ${MSP430SRC} ${MSP430HEADERS_MOC})
TARGET_LINK_LIBRARIES(msp430 ${QT_LIBRARIES} simkitperipheral)

INSTALL(TARGETS msp430
	DESTINATION ${LIB_INSTALL_DIR}/qsimkit/mcu/msp430
	COMPONENT msp430
)

INSTALL(FILES mcu.xml
	DESTINATION ${LIB_INSTALL_DIR}/qsimkit/mcu/msp430
	COMPONENT msp430
)

